--- a/index.html
+++ b/index.html
@@ -1,85 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
-<title>The House of Silva - Núcleo de comunicação e marketing</title>
-<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+	<head>
+		<meta charset="UTF-8">
+		<title>The House of Silva - Incubadora, Coworking, </title>
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="Espaço criativo e colaborativo da Zona Oeste do Rio de Janeiro" />
+		<meta name="keywords" content="Coworking, Incubadora, Zona Oeste, Era só mais um silva" />
+		<meta property=”og:title” content="The House of Silva - Coworking, Incubadora, Zona Oeste"/>
+    <meta property="og:type" content="community"/>
+    <meta property="og:description" content="Espaço criativo e colaborativo da Zona Oeste do Rio de Janeiro" />
+    <meta property="og:image" itemprop="image" content="http://thehouseofsilva.com/img/preview.jpg"/>
+    <meta property="og:url" content="http://thehouseofsilva.com"/>
+    <meta property="og:site_name" content="The House of Silva" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="http://thehouseofsilva.com">
+    <meta name="twitter:title" content="The House of Silva - Coworking, Incubadora, Zona Oeste">
+    <meta name="twitter:image" content="http://thehouseofsilva.com/img/preview.jpg">
 
 
-<meta property=”og:title” content="The House of Silva - Comunicação e marketing."/>
-<meta property="og:type" content="school"/>
-<meta property="og:description" content="The House of Silva - Comunicação e marketing." />
-<meta property="og:image" itemprop="image" content="img/lo"/>
-<meta property="og:url" content="http://www.thehouseofsilva.com"/>
-<meta property="og:site_name" content="The House of Silva - Comunicação e marketing." />
-<meta name="twitter:card" content="summary">
-<meta name="twitter:url" content="http://www.thehouseofsilva.com">
-<meta name="twitter:title" content="The House of Silva - Comunicação e marketing.">
-<meta name="twitter:image" content="img/thehouseofsilva-center.png">
-<meta property="og:locale" content="pt_BR" />
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/dist/jquery.fullPage.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-<!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
-<script src="vendors/jquery.easings.min.js"></script>
-<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-<script type="text/javascript" src="bower_components/fullpage.js/dist/jquery.fullPage.js"></script>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-<link rel="stylesheet" href="css/main.css" type="text/css" >
-</head>
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="landing">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		<!-- Header -->
+			<header id="header">
+				<h1><a href="index.html">THOS</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="#one">Incubadora</a></li>
+						<li><a href="#">Coworking</a></li>
+						<li><a href="#two">Nós</a></li>
+					</ul>
+				</nav>
+			</header>
 
-  ga('create', 'UA-77367680-2', 'auto');
-  ga('send', 'pageview');
+		<!-- Banner -->
+			<section id="banner">
 
-</script>
-<body>
-<section class="hero">
-	<div class="pattern">
-			<div class="container">
-				<h1 class="site-title row center-xs">
-					<a href="http://instagram.com/thehouseofsilva"> <img src="img/thehouseofsilva-center.png" class="logo" alt="The House of Silva - Comunicação e marketing."></a>
-				</h1><!-- /.site-title -->
-				<h1 class="section-name principal row center-xs">
-						Comunicação e marketing.
-				</h1><!-- /.pattern -->
-				
-			</div><!-- /.container -->
-		</div>
-</section> <!-- /. hero -->
-<!-- Footer -->
-<section id="footer">
-	 <ul class="icons row center-xs"> 
-		 <li><a href="http://twitter.com/thehouseofsilva" class="icon fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
-		 <li><a href="http://facebook.com/thehouseofsilva" class="icon fa-facebook fa-2x"><span class="label">Facebook</span></a></li>
-		 <li><a href="http://instagram.com/thehouseofsilva" class="icon fa-instagram fa-2x"><span class="label">Instagram</span></a></li> 
-	 </ul> 
-	
-</section>
+				<!-- <ul class="actions">
+					<li>
+						<a href="#nos" class="button big">Saiba Mais</a>
+					</li>
+				</ul> -->
+			</section>
 
+		<!-- One -->
+			<section id="one" class="wrapper style1 align-center">
+				<div class="container">
+					<header>
+						<h2>Incubadora</h2>
+						<p>Um lugar onde artistas e negócios socioculturais encontram o combustível certo pra chegar no topo.
+Com um trabalho minucioso, esperamos lapidar essa valiosa mão de obra criativa da Zona Oeste.</p>
+					</header>
+					<div class="row 200%">
+						<section class="4u 12u$(small)">
+							<i class="icon big rounded fa-lightbulb-o" aria-hidden="true"></i>
+							<!-- <p>CRIATIVIDADE</p> -->
+						</section>
+						<section class="4u 12u$(small)">
+							<i class="icon big rounded fa-users" aria-hidden="true"></i>
+							<!-- <p>COLABARAÇO</p> -->
+						</section>
+						<section class="4u$ 12u$(small)">
+							<i class="icon big rounded fa-space-shuttle" aria-hidden="true"></i>
+							<!-- <p>Inpulsionando os Negocios Locais</p> -->
+						</section>
+					</div>
+				</div>
+			</section>
 
-</body>
+		<!-- Two -->
+			<section id="two" class="wrapper style2 align-center">
+				<div class="container">
+					<header>
+						<h2>Nós</h2>
+						<p>Pessoas dispostas dinamicas e prontas para o trabalho, cheios de vontade de aprender e ensinar e apaixonados por pessoas.</p>
+					</header>
+					<div class="row">
+						<!-- <section class="feature 6u 12u$(small)">
+							<img class="image fit" src="images/pic01.jpg" alt="" />
+							<h3 class="title">Lorem ipsum dolor</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsa voluptate, quae quibusdam. Doloremque similique, reiciendis sit quibusdam aperiam? Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						</section>
+						<section class="feature 6u$ 12u$(small)">
+							<img class="image fit" src="images/pic02.jpg" alt="" />
+							<h3 class="title">Esse, fugiat, in</h3>
+							<p>Natus perspiciatis fugit illum porro iusto fuga nam voluptas minima voluptates deserunt, veniam reiciendis harum repellat necessitatibus. Animi, adipisci qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						</section>
+						<section class="feature 6u 12u$(small)">
+							<img class="image fit" src="images/pic03.jpg" alt="" />
+							<h3 class="title">Voluptates, repudiandae, dolor</h3>
+							<p>Voluptatibus repellendus tempora, quia! Consequuntur atque, rerum quis, ullam labore officiis ipsa beatae dolore, assumenda eos harum repudiandae, qui ab! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						</section>
+						<section class="feature 6u$ 12u$(small)">
+							<img class="image fit" src="images/pic04.jpg" alt="" />
+							<h3 class="title">Eveniet, reiciendis, veniam</h3>
+							<p>Rem nulla molestiae inventore quibusdam repudiandae doloremque eveniet ullam, qui autem possimus saepe laudantium numquam sapiente vel. Repudiandae, nihil tempore. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						</section> -->
+					</div>
+					<footer>
+						<ul class="actions">
+							<li>
+								<a href="http://facebook.com/thehouseofsilva" class="button alt big">Saiba Mais</a>
+							</li>
+						</ul>
+					</footer>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<div class="row">
+						<section class="4u 6u(medium) 12u$(small)">
+							<h3>Noticias</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, cumque!</p>
+							<ul class="alt">
+								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+								<li><a href="#">Quod adipisci perferendis et itaque.</a></li>
+								<li><a href="#">Itaque eveniet ullam, veritatis reiciendis?</a></li>
+								<li><a href="#">Accusantium repellat accusamus a, soluta.</a></li>
+							</ul>
+						</section>
+						<section class="4u 6u$(medium) 12u$(small)">
+							<h3>Caledario de Cursos</h3>
+							<p>Proximos Cursos Disponiveis</p>
+							<ul class="alt">
+								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+								<li><a href="#">Id inventore, qui necessitatibus sunt.</a></li>
+								<li><a href="#">Deleniti eum odit nostrum eveniet.</a></li>
+								<li><a href="#">Illum consectetur quibusdam eos corporis.</a></li>
+							</ul>
+						</section>
+						<section class="4u$ 12u$(medium) 12u$(small)">
+							<h3>Chega junto</h3>
+							<ul class="icons">
+								<li><a href="http://twitter.com/thehouseofsilva" class="icon rounded fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="http://facebook.com/thehouseofsilva" class="icon rounded fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="http://pinterest.com/thehouseofsilva" class="icon rounded fa-pinterest"><span class="label">Pinterest</span></a></li>
+								<li><a href="http://youtube.com/thehouseofsilva" class="icon rounded fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="http://linkedin.com/in/thehouseofsilva" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="tabular">
+								<li>
+									<h3>Endereço</h3>
+									Rua Mario Mendes, 433<br>
+									Senador Vasconcelos, Rio de Janeiro
+								</li>
+								<li>
+									<h3>e-mail</h3>
+									<a href="#">contato@thehouseofsilva.com</a>
+								</li>
+								<li>
+									<h3>Tefonel</h3>
+									(021) 3368-9939
+								</li>
+							</ul>
+						</section>
+					</div>
+					<ul class="copyright">
+						<li>&copy; The House of Silva. Todos os Direitos Reservados.</li>
+					</ul>
+				</div>
+			</footer>
+
+	</body>
 </html>
