--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<meta name="description" content="Espaço criativo e colaborativo da Zona Oeste do Rio de Janeiro" />
 		<meta name="keywords" content="Coworking, Incubadora, Zona Oeste, Era só mais um silva" />
 		<meta property=”og:title” content="The House of Silva - Coworking, Incubadora, Zona Oeste"/>
-    <meta property="og:type" content="community"/>
-    <meta property="og:description" content="Espaço criativo e colaborativo da Zona Oeste do Rio de Janeiro" />
-    <meta property="og:image" itemprop="image" content="http://thehouseofsilva.com/img/preview.jpg"/>
-    <meta property="og:url" content="http://thehouseofsilva.com"/>
-    <meta property="og:site_name" content="The House of Silva" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="http://thehouseofsilva.com">
-    <meta name="twitter:title" content="The House of Silva - Coworking, Incubadora, Zona Oeste">
-    <meta name="twitter:image" content="http://thehouseofsilva.com/img/preview.jpg">
+	    	<meta property="og:type" content="community"/>
+	    	<meta property="og:description" content="Espaço criativo e colaborativo da Zona Oeste do Rio de Janeiro" />
+	    	<meta property="og:image" itemprop="image" content="http://thehouseofsilva.com/img/preview.jpg"/>
+	    	<meta property="og:url" content="http://thehouseofsilva.com"/>
+	    	<meta property="og:site_name" content="The House of Silva" />
+	    	<meta name="twitter:card" content="summary">
+	    	<meta name="twitter:url" content="http://thehouseofsilva.com">
+	    	<meta name="twitter:title" content="The House of Silva - Coworking, Incubadora, Zona Oeste">
+	    	<meta name="twitter:image" content="http://thehouseofsilva.com/img/preview.jpg">
 
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -81,8 +81,19 @@ Com um trabalho minucioso, esperamos lapidar essa valiosa mão de obra criativa 
 				</div>
 			</section>
 
-		<!-- Two -->
-			<section id="two" class="wrapper style2 align-center">
+			<section id="coworking" class="wrapper style2 align-center">
+			<header>
+				<h2>COWORKING</h2>
+					<p>Espaço de colaboração e crescimento mutuo com infraestrutura adequada para diversos perfis necogios e profissionais</p>
+						</header>
+						<div class="row 200%">
+						<section class="4u 12u$(small)">
+							<i class="icon big rounded fa-house" aria-hidden="true"></i>
+							<!-- <p>CRIATIVIDADE</p> -->
+						</section>
+						</div>
+			</section>
+			<section id="nos" class="wrapper style1 align-center">
 				<div class="container">
 					<header>
 						<h2>Nós</h2>
