--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ Com um trabalho minucioso, esperamos lapidar essa valiosa mão de obra criativa 
 						</header>
 						<div class="row 200%">
 						<section class="4u 12u$(small)">
-							<i class="icon big rounded fa-house" aria-hidden="true"></i>
-							<!-- <p>CRIATIVIDADE</p> -->
+							<i class="icon big rounded fa-home" aria-hidden="true"></i>
 						</section>
 						</div>
 			</section>
