--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Com um trabalho minucioso, esperamos lapidar essa valiosa mão de obra criativa 
 								<li><a href="#">Illum consectetur quibusdam eos corporis.</a></li>
 							</ul>
 						</section> -->
-						<section class="4u$ 12u$(medium) 12u$(small)">
+						<section class="4u 12u$(medium) 12u$(small)">
 							<h3>Chega junto</h3>
 							<ul class="icons">
 								<li><a href="http://twitter.com/thehouseofsilva" class="icon rounded fa-twitter"><span class="label">Twitter</span></a></li>
@@ -174,7 +174,7 @@ Com um trabalho minucioso, esperamos lapidar essa valiosa mão de obra criativa 
 									<a href="#">contato@thehouseofsilva.com</a>
 								</li>
 								<li>
-									<h3>Tefonel</h3>
+									<h3>Telefone</h3>
 									(021) 3368-9939
 								</li>
 							</ul>
